# sanicrs

./: .gitignore  Cargo.toml  README.md  build.rs  meson.build
.github/workflows/: workflow.yml
data/: me.quartzy.sanicrs.desktop  me.quartzy.sanicrs.gschema.xml  me.quartzy.sanicrs.metainfo.xml  me.quartzy.sanicrs.service.in  me.quartzy.sanicrs.yml  meson.build
data/icons/: meson.build
src/: app.rs  main.rs  meson.build  mpris.rs  player.rs
src/css/: style.css
src/dbus/: base.rs  mod.rs  player.rs  track_list.rs
src/opensonic/: cache.rs  client.rs  mod.rs  types.rs
src/ui/: album_object.rs  app.rs  artist_object.rs  bottom_bar.rs  browse.rs  cover_picture.rs  current_song.rs  header_bar.rs  info_dialog.rs  item_list.rs  lyrics_line.rs  mod.rs  preferences_view.rs  random_songs_dialog.rs  setup.rs  song_object.rs  track_list.rs
src/ui/browse/: album_list.rs  browse_page.rs  mod.rs  search.rs  view_album_page.rs  view_artist_page.rs
