[package]
name = "sanicrs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", default-features = false, features = [
    "fs",
    "macros"
] }
reqwest = { version = "0.12.23", features = ["blocking"] }
format-url = "0.6.2"
serde_json = "1.0.143"
serde_with = { version = "3.14.0" }
serde = { version = "1.0.219", features = ["derive"] }
md5 = "0.8.0"
rand = "0.9.2"
async-channel = { version = "2.5.0" }
zbus = { version = "5.9.0", default-features = false, features = [
    "blocking-api",
    "tokio"
] }
relm4 = { version = "0.9.1", default-features = false, features = [
    "libadwaita",
    "gnome_47",
    "adw",
    "macros",
] }
relm4-icons = "0.10.0-beta.2"
uuid = { version = "1.18.1", default-features = false, features = ["v4"] }
color-thief = "0.2.2"
libsecret = "0.7.0"
mpris-server = { version = "0.9.0" }
evicting_cache_map = {version = "0.5.0"}
gstreamer = "0.24.2"
gstreamer-play = "0.24.2"

[build-dependencies]
relm4-icons-build = "0.10.0-beta.2"
